tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ForAlltheArtists-AAAAAAAAAAAAAAAAAAAKnw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2719,
  "prerequisites": [
    1747,
    1710
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These are the Creative components. Depending on what it is, there's also T2 and T3 components too.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "For All the Artists Out There",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1747,
    1710
  ],
  "rewards": [],
  "tasks": []
}
