tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__HelloWorld-AAAAAAAAAAAAAAAAAAAG4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1761,
  "prerequisites": [
    1747
  ],
  "properties": {
    "auto_claim": false,
    "desc": "First things first, let's install OpenOS to the computer so you don't always need disk in the drive. Type in 'install' and then type 'Y' when asked if you wish to install OpenOS.\n\nWhen finished, remove the disk and toss it on your wall and reboot the computer.\n\nType 'df' to display all present file systems and mount points, you'll notice one named OpenOS; this is your hard drive's default name after installing the OS.\n\nLet's change it with 'label -a OpenOS HDD', '-a' checks for names starting with what you type after it with that command. [note]<-- part of this is apparently wrong? Thanks for the non-ticket explaining what part, guys.[/note]\n\nNow for fun, let's make your first program! How about something functional, make a with 'edit startup' this will bring you to an edit page for a new program called startup. Let's just have it do something simple, 'print(\"Hello World!\")' Like that'll never get old.\n\nNow press Ctrl+S to save, and Ctrl+W to get out of that screen. Back in your home root let's now type startup and you'll see it display \"Hello World!\" neat huh?\n\nLet's now make startup actually work on startup. Type 'edit .shrc' .shrc is a mystic file that runs shell commands when booting your PC. So in .shrc type 'startup' save and reboot the computer. Now it should say \"Hello World!\" upon starting. Double neat right?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hello World!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1747
  ],
  "rewards": [],
  "tasks": []
}
