tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ILovePressingthe-AAAAAAAAAAAAAAAAAAAG4g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1762,
  "prerequisites": [
    1759
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's so refreshing.\n\nPlace a keyboard facing a screen, or stuck to the back of a screen to make it able to interact with a computer.\n\nAbsolutely necessary to doing anything on your computer, but can safely be removed once you have an endlessly running program.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I Love Pressing the F5 Key.",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1759
  ],
  "rewards": [],
  "tasks": []
}
