tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ItemValve-AAAAAAAAAAAAAAAAAAAH2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2010,
  "prerequisites": [
    1989
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Item Valve allows your factory manager to suck in dropped items from around them in a 3x3x3 cube. Or you can use them to push items out into the world in the direction they are pointing.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Item Valve",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1989
  ],
  "rewards": [],
  "tasks": []
}
