tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__Itseverytimethes-5mcwk7dYSBydA9KRHbW59A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13211388792486083060,
  "prerequisites": [
    1759
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hello fellow achievement hunter.\n\nLooking for the OC Transistor to get one out of all these achievements?\nLucky you, because now you can craft it and it's really simple.\n\nJust put one of your first GT Transistors in your 2x2 crafting grid and be happy with its result. Don't forget to change it back the same way.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It's everytime these Transistors",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1759
  ],
  "rewards": [],
  "tasks": []
}
