tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__MachineInventory-AAAAAAAAAAAAAAAAAAAHxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1989,
  "prerequisites": [
    1225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The core block of Stacy's...er Steve's Factory Manager. SFM is a high tier automation system. While AE2 can handle a lot of different crafting tasks, SFM can handle even more complex crafting. It's not actually needed for the Assembly Line. But still, this is one place where you can go that route.\n\nInventory Cables connect the MIM to inventories or tanks.\n\nRight now until some Moron figures it out, your best bet is to experiment, ask for help on Discord, and search Google. The interface resembles most GUI based automation systems like LabView.\n\nThere have been TPS problems caused by poorly designed SFM setups. Make sure your outputs are properly emptied, and don't get filled.\n\nInventory cables are the \"basic\" cable of SFM. They allow the MIM to interact with an inventory, and act as a connector cable to other cables.\n\nmehdi2344 thinks my jokes suck, but he's an idiot, so there.\n\nThanks to Nori Silverrage for writing up these quests!\n\n[note]BTW, there's a Creative Supplier for creative testing. The Energistics Connector is disabled because it doesn't work correctly.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Machine Inventory Manager",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1225
  ],
  "rewards": [],
  "tasks": []
}
